--- a/index.html
+++ b/index.html
@@ -20,6 +20,37 @@
       <div id="modalMedia"></div>
     </div>
   </div>
+<div class="bubbles">
+  <span></span>
+  <span></span>
+  <span></span>
+  <span></span>
+  <span></span>
+  <span></span>
+  <span></span>
+  <span></span>
+</div>
+<audio id="oceanSound" autoplay loop>
+  <source src="ocean.mp3" type="audio/mpeg">
+  Your browser does not support the audio element.
+</audio>
+<!-- <button id="toggleSound" style="position: fixed; bottom: 20px; right: 20px; z-index: 1000;">🔊</button>
+
+<script>
+  const ocean = document.getElementById("oceanSound");
+  const btn = document.getElementById("toggleSound");
+
+  btn.addEventListener("click", () => {
+    if (ocean.paused) {
+      ocean.play();
+      btn.textContent = "🔊";
+    } else {
+      ocean.pause();
+      btn.textContent = "🔇";
+    }
+  });
+</script> -->
+
 
   <script src="script.js"></script>
 </body>
